# koda

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  generate_logs.py
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/app/: config.rs  events.rs  state.rs
src/core/: mod.rs  models.rs  parser.rs  tailer.rs
src/ui/: layout.rs  theme.rs
src/ui/components/: log_view.rs  mod.rs  spinner.rs  tabs.rs
src/utils/: anim.rs
