[package]
name = "koda-tail"
version = "0.1.1"
authors = ["Sam Cheng <samcheng072@gmail.com>"]
edition = "2021"
description = "A modern, high-performance log tailer with a beautiful TUI"
repository = "https://github.com/Luvion1/koda"
license = "MIT"
keywords = ["log", "tail", "tui", "monitoring", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1.15"
ratatui = "0.26"
crossterm = "0.27"
linemux = "0.3.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
throbber-widgets-tui = "0.5"
anyhow = "1.0"
chrono = "0.4"

[lib]
name = "koda"
path = "src/lib.rs"
